--- a/login-btn/src/components/Home/Content/Content.module.css
+++ b/login-btn/src/components/Home/Content/Content.module.css
@@ -1,15 +1,120 @@
+body{
+    box-sizing: border-box;
+}
+h1, h2, h3, h4, h5, h6{
+    margin: 0;
+    padding: 0;
+}
+a{
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+}
 
+/* Content */
+.content{
+    margin-top: 120px;
+}
+
+/* content border */
 .wrapper{
     max-width: 1200px;
     margin: 0 auto;
-    background-color: #fff;
 }
 
+/* images and texts */
 .inner{
     width: 100%;
     min-height: 400px;
-    background-color: rgb(120, 205, 245);
 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+/* images */
+.image{
+    max-width: 540px;
+    height: auto;
+}
+.scull{
+    width: 404px;
+    height: 363px;
+}
+/* texts */
+.text{
+    max-width: 380px;
+}
+
+.content_a{
+    font-weight: 700;
+    font-size: 16.9722px;
+    line-height: 25px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FF5B79;
+}
+
+.content_a:hover,
+.content_a:active {
+  background-color:#d05a56;
+  background-position: 0 0;
+  color: white;
+}
+
+.content_a:active {
+  opacity: .5;
+}
+
+.content_h1{
+    font-weight: 900;
+    font-size: 57.7056px;
+    line-height: 109%;
+    color: #FFFFFF;
+}
+
+.content_p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 180%;
+    color: #FFFFFF;
+    opacity: 0.8;
+}
+
+/* button */
+
+.button {
+  background: #FF4742;
+  border: 1px solid #FF4742;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 16px;
+  min-height: 40px;
+  outline: 0;
+  padding: 12px 14px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: 176px;
+  margin-top: 50px;
+}
+
+.button:hover,
+.button:active {
+  background-color:#d05a56;
+  background-position: 0 0;
+  color: white;
+}
+
+.button:active {
+  opacity: .5;
 }
