--- a/login-btn/src/components/Header.module.css
+++ b/login-btn/src/components/Header.module.css
@@ -17,16 +17,20 @@ header {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 header .headContainer {
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 80%;
 }
 
 .headContainer .headLogo {
@@ -64,4 +68,4 @@ header .headContainer {
   position: absolute;
   right: 0;
 }
-/*# sourceMappingURL=Header.css.map */
+/*# sourceMappingURL=Header.module.css.map */
