--- a/login-btn/src/components/Home/Footer/Footer.module.css
+++ b/login-btn/src/components/Home/Footer/Footer.module.css
@@ -1,4 +1,5 @@
 footer {
+  margin-top: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -12,7 +13,7 @@ footer {
   display: -ms-flexbox;
   display: flex;
   font-family: Poppins;
-  color: black;
+  color: white;
   font-size: 16px;
 }
 
