--- a/login-btn/src/components/Home/Footer/Footer.module.scss
+++ b/login-btn/src/components/Home/Footer/Footer.module.scss
@@ -1,4 +1,5 @@
 footer {
+  margin-top: 30px;
   display: flex;
   justify-content: space-around;
 }
@@ -7,12 +8,12 @@ footer {
   width: 80%;
   display: flex;
   font-family: Poppins;
-  color: black;
+  color: white;
   font-size: 16px;
-  span{
+  span {
     font-size: 20px;
   }
-  p{
+  p {
     width: auto;
     text-align: right;
   }
