--- a/login-btn/src/components/Home/Header/Header.module.css
+++ b/login-btn/src/components/Home/Header/Header.module.css
@@ -8,10 +8,13 @@
   color: #ff5b79;
 }
 
+* a:hover {
+  color: white;
+}
+
 header {
   width: 100%;
   height: 70px;
-  background: gray;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
