--- a/login-btn/src/components/Home/Header/Header.module.scss
+++ b/login-btn/src/components/Home/Header/Header.module.scss
@@ -5,13 +5,15 @@
   a {
     text-decoration: none;
     color: $headLniksColor;
+    &:hover {
+      color: white;
+    }
   }
 }
 
 header {
   width: 100%;
   height: 70px;
-  background: gray;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
