--- a/login-btn/src/components/Home/Forms/LogIn/LogIn.module.scss
+++ b/login-btn/src/components/Home/Forms/LogIn/LogIn.module.scss
@@ -39,11 +39,22 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
   }
+
   .btnContainer {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 40px;
+
+    .registrationLink {
+      color: lightblue;
+      font-size: 14px;
+      letter-spacing: 1px;
+      &:hover {
+        color: #ffffff;
+      }
+    }
     .submitBtn {
-      margin-top: 40px;
       width: 50%;
       height: 30px;
       font-weight: bold;
