--- a/login-btn/src/components/Home/Header/Header.module.css
+++ b/login-btn/src/components/Home/Header/Header.module.css
@@ -58,4 +58,21 @@ header .headContainer {
   display: -ms-flexbox;
   display: flex;
 }
+
+.supportBtn {
+  width: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  color: #ff5b79;
+  border: 1px #ff5b79 solid;
+  padding: 6px 5px;
+  border-radius: 20px;
+  right: 0;
+}
 /*# sourceMappingURL=Header.module.css.map */
